--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,65 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+body {
+	font-family: Roboto, sans-serif;
+}
+
 .entry-content p {
-    @apply mb-2;
+	@apply mb-2;
+}
+
+.container {
+	@apply w-full mx-auto px-4 relative overflow-hidden md:w-[1100px];
+}
+
+.skew-div:after {
+	content: " ";
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background: inherit;
+	transform-origin: bottom left;
+	-ms-transform: skew(-30deg, 0deg);
+	-webkit-transform: skew(-30deg, 0deg);
+	transform: skew(-30deg, 0deg);
+}
+.skew-div:before {
+	content: " ";
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background: inherit;
+	transform-origin: top left;
+	-ms-transform: skew(-30deg, 0deg);
+	-webkit-transform: skew(-30deg, 0deg);
+	transform: skew(-30deg, 0deg);
+}
+.pagination {
+	.nav-links {
+		@apply flex flex-wrap gap-2;
+
+        .page-numbers{
+            @apply aspect-square w-10 flex m-0 p-0 justify-center items-center text-sm;
+        }
+        .page-numbers:not(.dots){
+            @apply border border-gray-500;
+        }
+        .page-numbers.current{
+            @apply bg-red-500 border-red-500 text-white;
+        }
+        a.page-numbers:hover{
+            @apply opacity-70 duration-200;
+        }
+	}
 }
