--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,6 +11,9 @@ body {
 @import "components/typography.scss";
 @import "components/navbar.scss";
 @import "components/pagination.scss";
+@import "components/card/card-horizontal.scss";
+
+
 @import "vendor/splide.scss";
 
 .container {
