--- a/assets/scss/components/typography.scss
+++ b/assets/scss/components/typography.scss
@@ -4,7 +4,7 @@ a {
 }
 
 a {
-    @apply text-blue-600 dark:text-blue-500 hover:underline cursor-pointer;
+    @apply text-blue-600 hover:text-blue-900 dark:text-blue-800 hover:underline cursor-pointer duration-200;
 }
 
 .entry-content p {
